# raspberry-pi-project

./: README.md  raspberry-pi-project.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check_pi-web_api-server.yml  check_pi-web_frontend.yml  pi-web_api-server.yml  pi-web_device-server.yml  pi-web_frontend.yml
device/: Cargo.toml  device.code-workspace
device/src/: lib.rs  main.rs
helm/: README.md
helm/pi-web/: Chart.yaml  values.yaml
helm/pi-web_api-server/: Chart.yaml  values.yaml
helm/pi-web_frontend/: Chart.yaml  values.yaml
pi-web/api-server/: .gitignore  .scalafmt.conf  Dockerfile  README.md  batch_device-all.sh  build.sbt  build.sh  makefile  start.sh
pi-web/device-server/: Dockerfile  main.py  makefile
pi-web/frontend/: Dockerfile  README.md  angular.json  (+6 more)
web/: .gitignore  Cargo.toml  README.md  docker-compose.yaml  makefile
web/back/: Cargo.toml
web/back/src/: main.rs
web/backend/: .gitignore  Cargo.toml  README.md  build.sbt  makefile
web/backend/.devcontainer/: devcontainer.json
web/backend/app/controllers/: HomeController.scala
web/backend/conf/: application.conf  routes
web/backend/src/: api.rs  app.rs  db.rs  errors.rs  main.rs  routes.rs  validate_json.rs
web/backend/src/routes/: db.rs  device.rs  static_file.rs
web/front/: angular.json  package-lock.json  package.json
web/front/src/app/: app.component.html  app.component.ts  hello.service.ts
web/frontend/: README.md  angular.json  eslint.config.js  makefile  package-lock.json  package.json
web/frontend/.devcontainer/: devcontainer.json
web/frontend/src/: proxy.conf.json
web/frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  hello.service.ts
web/frontend/src/app/component/any-db/: any-db.component.html  any-db.component.ts
web/frontend/src/app/component/device/: device.component.html  device.component.ts
web/frontend/src/app/component/show-db/: show-db.component.html
web/frontend/src/app/service/: any-db.service.ts  device.service.ts  hello.service.ts
web/src/: app.rs  db.rs  errors.rs  main.rs  routes.rs  state.rs
web/src/routes/: err404.rs  hello.rs  static_file.rs
(+145 files in other folders)
