[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[dependencies]
device = { path = "../../device" }
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
] }
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.1"
